--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "tha-site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "sass --watch scss/main.scss:css/style.css"
+    "start": "sass --watch scss/main.scss:css/style.css",
+    "build": "parcel build html/index.html --dist-dir build --public-url ./",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/Len-J-108/tha-site#readme",
   "dependencies": {
+    "parcel": "^2.8.3",
     "sass": "^1.60.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
